force-app/main/default/objects/LLC_BI__Statistic__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is optional. It is manually populated. This field indicates the Account associated with the calculated statistic.</description>
    <inlineHelpText>Account that is associated to detail records</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Statistics</relationshipLabel>
    <relationshipName>Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>