force-app/main/default/objects/LLC_BI__Statistic__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is optional. It is manually populated and indicates the Loan associated with the calculated statistic.</description>
    <inlineHelpText>Loan that this statistic belongs to</inlineHelpText>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Statistics</relationshipLabel>
    <relationshipName>Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>