force-app/main/default/objects/LLC_BI__Statistic__c/fields/LLC_BI__Value_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Value_Date__c</fullName>
    <description>This field is optional and is manually populated. If specified, it indicates the date value associated with the statistics record.</description>
    <inlineHelpText>Date Value for the statistics field</inlineHelpText>
    <label>Value Date</label>
    <type>Date</type>
</CustomField>